[gd_scene load_steps=41 format=2]

[ext_resource path="res://ufo.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://MainScene.tres" type="Environment" id=3]
[ext_resource path="res://ColorRect.gd" type="Script" id=4]
[ext_resource path="res://Color2.gd" type="Script" id=5]
[ext_resource path="res://SpawnTriangle.gd" type="Script" id=6]
[ext_resource path="res://space.png" type="Texture" id=7]
[ext_resource path="res://ufo2.png" type="Texture" id=8]
[ext_resource path="res://ufo3.png" type="Texture" id=9]
[ext_resource path="res://ufo5.png" type="Texture" id=10]
[ext_resource path="res://ufo4.png" type="Texture" id=11]
[ext_resource path="res://ufo6.png" type="Texture" id=12]
[ext_resource path="res://ufo7.png" type="Texture" id=13]
[ext_resource path="res://ufo8.png" type="Texture" id=14]
[ext_resource path="res://ufo9.png" type="Texture" id=15]
[ext_resource path="res://ufo10.png" type="Texture" id=16]
[ext_resource path="res://Reset walls.tscn" type="PackedScene" id=17]
[ext_resource path="res://RichTextLabel.gd" type="Script" id=18]
[ext_resource path="res://joystix monospace.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://score.png" type="Texture" id=20]
[ext_resource path="res://Blackhole.tscn" type="PackedScene" id=21]
[ext_resource path="res://wall.gd" type="Script" id=22]
[ext_resource path="res://0mysteryufo.png" type="Texture" id=23]
[ext_resource path="res://1mysteryufo.png" type="Texture" id=24]
[ext_resource path="res://4mysteryufo.png" type="Texture" id=25]
[ext_resource path="res://2mysteryufo.png" type="Texture" id=26]
[ext_resource path="res://5mysteryufo.png" type="Texture" id=27]
[ext_resource path="res://5mysteryufo4.png" type="Texture" id=29]
[ext_resource path="res://5mysteryufo1.png" type="Texture" id=30]
[ext_resource path="res://5mysteryufo5.png" type="Texture" id=31]
[ext_resource path="res://5mysteryufo3.png" type="Texture" id=32]
[ext_resource path="res://5mysteryufo2.png" type="Texture" id=33]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "fall2",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 27 ) ],
"loop": true,
"name": "default2",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 41 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 460 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 502.0
height = 0.0

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 19 )

[sub_resource type="Animation" id=7]
length = 0.988467
step = 0.329489
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.658979, 0.988468 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 14 ), Vector2( 2400, 14 ), Vector2( 2400, 2000 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.94697
step = 0.329489
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.658979 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2500, 14 ), Vector2( 0, 14 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Color2" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="ColorRect3" type="ColorRect" parent="Color2"]
margin_left = -1928.0
margin_top = 1052.0
margin_right = 3518.0
margin_bottom = 1131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Color2"]
position = Vector2( 0, 51 )
polygon = PoolVector2Array( -26.2466, 1001.26, 1995.19, 1001.38, 2047.87, 1159.25, -83.9186, 1164.29, -73.8393, 1003.02 )

[node name="Color" type="StaticBody2D" parent="."]
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="Color"]
margin_left = -2228.0
margin_top = -46.0
margin_right = 3229.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Color"]
position = Vector2( 0, -46 )
polygon = PoolVector2Array( -54.757, 78.7611, 2012.59, 78.2337, 2010.07, -35.1592, -393.859, -45.2386, -411.498, 75.7138 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="ResetWalls" parent="." instance=ExtResource( 17 )]
position = Vector2( -545, 196 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
collision_layer = 2

[node name="Area2D" parent="ResetWalls" index="0"]
script = null

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -637, -658 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
material = SubResource( 1 )
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 2 )
animation = "fall2"

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 5.084
autostart = true

[node name="CanvasModulate" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasModulate"]
motion_scale = Vector2( 3, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="space" type="Sprite" parent="CanvasModulate/ParallaxLayer"]
position = Vector2( 976.284, 530.205 )
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="CameraTrackingObject" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraTrackingObject"]
position = Vector2( 960, 540 )
current = true
smoothing_enabled = true

[node name="wall" type="KinematicBody2D" parent="CameraTrackingObject"]
script = ExtResource( 22 )

[node name="Area2D" type="Area2D" parent="CameraTrackingObject/wall"]

[node name="wall" type="CollisionShape2D" parent="CameraTrackingObject/wall/Area2D"]
position = Vector2( -21, 507 )
shape = SubResource( 4 )

[node name="attractor" type="Area2D" parent="CameraTrackingObject"]
position = Vector2( -33, 509 )
space_override = 3
gravity_point = true
gravity = 535.436

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraTrackingObject/attractor"]
position = Vector2( 1, 9 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Blackhole" parent="CanvasLayer" instance=ExtResource( 21 )]
position = Vector2( -41, 511 )

[node name="HighScore" type="StaticBody2D" parent="CanvasLayer"]
position = Vector2( -2133, 598 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/HighScore"]
position = Vector2( 2263, -561 )
scale = Vector2( 4, 4 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="CanvasLayer/HighScore"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 2397.0
margin_top = -608.0
margin_right = 2466.0
margin_bottom = -531.0
custom_fonts/font = SubResource( 6 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasLayer"]
position = Vector2( 0, 14 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/StaticBody2D"]
process_priority = 6
margin_left = -96.0
margin_top = -50.0
margin_right = 2033.0
margin_bottom = 1163.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/StaticBody2D"]
anims/fade_in = SubResource( 7 )
anims/fade_out = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer3" to="ResetWalls" method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="animation_finished" from="CanvasLayer/StaticBody2D/AnimationPlayer" to="Player" method="_on_AnimationPlayer_animation_finished"]

[editable path="ResetWalls"]
